# claude-deck

./: .gitignore  Cargo.toml  README.md  install.sh
assets/web/: app.js  index.html  styles.css
hooks/: claude-deck-hook.sh
src/: config.rs  lib.rs  main.rs
src/device/: buttons.rs  manager.rs  mod.rs  protocol.rs
src/display/: buttons.rs  emoji.rs  gif.rs  mod.rs  renderer.rs  strip.rs
src/hooks/: listener.rs  mod.rs  status.rs
src/input/: handler.rs  keystrokes.rs  mod.rs
src/profiles/: mod.rs  store.rs
src/state/: manager.rs  mod.rs
src/system/: mod.rs
src/web/: handlers.rs  mod.rs  server.rs  static_files.rs  types.rs
