[package]
name = "claude-deck"
version = "0.1.0"
edition = "2021"
description = "Hardware controller for Claude Code using AJAZZ AKP05E"
license = "MIT"

[dependencies]
# Device communication
mirajazz = "0.4"
tokio = { version = "1", features = ["full"] }

# Keystroke injection
enigo = { version = "0.2", features = ["serde"] }

# Image rendering
image = "0.25"
imageproc = "0.25"
rusttype = "0.9"

# State & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# File watching (for hooks)
notify = "6"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# System/Unix
libc = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
